# rustypandas

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  styles.css  tailwind.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/test/: config.json
src-tauri/src/: errors.rs  main.rs
src-tauri/src/controllers/: configuration.rs
src-tauri/src/models/: configuration.rs  errors.rs  mod.rs  workweek.rs
src-tauri/src/models/configuration/: color_schemes.rs  profile.rs
src-tauri/src/models/configuration/color_schemes/: test.rs
src-tauri/src/models/configuration/profile/: test.rs
src-tauri/src/models/workweek/: test.rs  workday.rs
src-tauri/src/models/workweek/workday/: test.rs
src-tauri/src/repositories/: mod.rs
src-tauri/src/repositories/configuration/: dto.rs  errors.rs  mod.rs  repository.rs
src-tauri/src/repositories/configuration/dto_rework/: Actions.rs  AnchorKey.rs  ApperanceConfig.rs  BellSound.rs  BellStyle.rs  ClearBufferType.rs  Color.rs  ColorOrIndex.rs  CommandPaletteLaunchMode.rs  Coordinates.rs  CopyFormat.rs  DynamicProfilesResource.rs  FindMatchDirection.rs  FocusDirection.rs  FolderEntry.rs  FontConfig.rs  Icon.rs  KeyChordSegment.rs  MoveTabDirection.rs  NewTabMenuEntry.rs  NewTerminalArgs.rs  ProfileGuid.rs  ResizeDirection.rs  SchemePair.rs  ScrollToMarkDirection.rs  ShortcutActionName.rs  ShowCloseButton.rs  SplitDirection.rs  SwitchToAdjacentTabArgs.rs  TabRowTheme.rs  TabTheme.rs  Theme.rs  ThemeColor.rs  ThemePair.rs  (+4 more)
src-tauri/src/repositories/gif/: errors.rs  mod.rs  repository.rs
(+34 files in other folders)
